--- a/l10n_it_pec_messages/i18n/it.po
+++ b/l10n_it_pec_messages/i18n/it.po
@@ -154,7 +154,7 @@ msgstr "Fetchmail servers abilitato per essere usato"
 #. module: l10n_it_pec_messages
 #: field:fetchmail.server,pec:0 field:ir.mail_server,pec:0
 msgid "Pec Server"
-msgstr "PEC Server"
+msgstr "Account PEC"
 
 #. module: l10n_it_pec_messages
 #: view:mail.message:0
@@ -376,7 +376,7 @@ msgstr ""
 #. module: l10n_it_pec_messages
 #: view:fetchmail.server:0
 msgid "Configure allowed users"
-msgstr "Configura utenti abilitati a questo server"
+msgstr "Utenti account PEC"
 
 #. module: l10n_it_pec_messages
 #: view:mail.compose.message:0
